2005-08-12 01:23 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correction for crash when loading
	.gorm files via [NSApplication openFile:...].

2005-08-11 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Removed explicit check for table
	or text view.
	* GormCore/GormScrollViewAttributesInspector.m: removed explicit 
	check for table or text view.
	* Palettes/3Containers/inspectors.m: Added editorClassName
	* Palettes/4Data/GNUmakefile: Added new files.
	* Palettes/4Data/GormImageViewAttributesInspector.m: Pulled out
	IBObjectAdditions category
	* Palettes/4Data/GormTextViewAttributesInspector.[hm]: Change class
	name to GormTextViewAttributesInspector.
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m: Split
	* Palettes/4Data/GormDateFormatterAttributesInspector.m: Split
	* Palettes/4Data/GormTextViewEditor.m: Split
	* Palettes/4Data/inspectors.m: Moved all IBObjectAdditions categories
	here.

2005-08-10 21:05 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/GormTableViewEditor.m: in pasteInSelection,
	pasteType:fromPasteboard:parent: w/ _editedObject as the parent.

2005-08-10 02:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.[hm]: Added retrieveObjectForParent:recursive:
	which retrieves all of the children of a given parent.  Also modified
	detachObject: to use this method.
	* GormCore/GormFilePrefsManager.m: Bumped version to 0.13.1
	* GormInfo.plist: Bumped version to 0.13.1
	* Palettes/3Containers/GormNSTableViewInspector.gorm: Corrected minor
	spacing issue.

2005-08-07 21:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Added new GormObjectInspector.gorm file.
	* English.lproj/GormObjectInspector.gorm: New file.
	* GormCore/GNUmakefile: Added new GormObjectInspector.h.
	* GormCore/GormObjectInspector.m: Now loads gorm file.
	* GormCore/GormObjectInspector.h: New file.